<resources>
    <string name="app_name">ExTrack App</string>
    <string name="label_view_household_display_items">DisplayHouseHoldItems</string>
    <string name="label_houseHoldDisplayDate">HouseHoldDisplayDate</string>
    <string name="label_household_display_amount">HouseHoldDisplayAmount</string>
    <string name="button_main_menu">MainMenuButton</string>
    <string name="button_delete">DeleteButton</string>
    <string name="button_household_item_add">HouseHoldItemAdd</string>
    <string name="add_household_item">Add Household Item</string>
    <string name="houseHoldTotal">$0.00</string>
    <string name="UserNameLabel">User Name</string>

    <string name="PasswordInput">Enter Password</string>
    <string name="UserNameInput">Enter Username</string>

    <string name="password">Password</string>

    <string name="LoginUserNameLabel">Username</string>
    <string name="LoginUserNameInput">Enter Username</string>
    <string name="LoginPassword">Password</string>
</resources>