<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

        <TextView
            android:id="@+id/loginUserNameLabel"
            android:text="@string/LoginUserNameLabel"
            tools:layout_editor_absoluteX="35dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:textColor="#993CA9"
            android:textColorLink="#993CA9"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/loginUserNameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginUserNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="@string/LoginUserNameInput"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/loginUserNameLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="128dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/LoginPasswordLabel"
            android:layout_width="111dp"
            android:layout_height="40dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="2dp"
            android:text="@string/LoginPassword"
            android:textColor="#993CA9"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/loginPasswordInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUserNameLabel" />

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="128dp"
            android:ems="10"
            android:hint="@string/PasswordInput"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/LoginPasswordLabel"
            app:layout_constraintTop_toBottomOf="@+id/loginUserNameInput" />


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="Cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.297"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginPasswordLabel" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="64dp"
            android:text="Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>