<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">
        <TextView
            android:id="@+id/textViewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_view_household_display_items"
            android:textSize="40sp"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/design_default_color_secondary_variant"
            android:layout_marginStart="15dp"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/black" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textLabelHouseHoldItemDisplayDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="Item Description"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewHouseHoldItemDisplayDescription"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textLabelHouseHoldDisplayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/label_houseHoldDisplayDate"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewHouseHoldDisplayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textLabelHouseHoldDisplayAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/label_household_display_amount"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewHouseHoldDisplayAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonMainMenu"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_dark"
                    android:text="@string/button_main_menu"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck"

                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/design_default_color_secondary_variant"
                    />

                <Button
                    android:id="@+id/buttonDelete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_dark"
                    android:text="@string/button_delete"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck"

                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/design_default_color_secondary_variant"
                    />

            </TableRow>
        </TableLayout>
</LinearLayout>